gateway-api/examples/cross-namespace/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: blog-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: services-ns
