gateway-api/examples/cross-namespace/gateway-crossns.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: platform
spec:
  gatewayClassName: example-gc
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "site.local"
    allowedRoutes:
      namespaces:
        from: All
